<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:orientation="horizontal"
                android:padding="5dp">
                <ImageView
                    android:id="@+id/image_small_alpha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/b_3" />

                <!--<TextView-->
                <!--android:id="@+id/tvDiaryData"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center_horizontal">-->
                <!---->
                <!--</TextView>-->

                <!--<TextView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="10dp"-->
                <!--android:gravity="center_horizontal" >-->
                <!--</TextView>-->

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/image_big_alpha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/b_3" />

                <!--<ListView-->
                <!--android:id="@+id/lvDiaryBooking"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:divider="#636466"-->
                <!--android:layout_weight="1"-->
                <!--android:dividerHeight="1dip"-->
                <!--android:scrollbarStyle="outsideOverlay" />-->
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:orientation="horizontal"
                android:padding="10dp" >

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/text_of_next">

                </Button>

                <Button
                    android:id="@+id/btn_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background = "@drawable/roundedbutton"
                    android:text="@string/text_of_home">
                </Button>

                <Button
                    android:text="@string/text_of_back"
                    android:id="@+id/btn_back"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background = "@drawable/roundedbutton"
                    android:layout_marginLeft="5dp">
                </Button>
            </LinearLayout>
        </LinearLayout>
    <!--</ScrollView>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="5dp">-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:src="@drawable/mina"/>-->

    <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->

        <!--<ImageButton-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
    <!--</LinearLayout>-->

</RelativeLayout>